update fixed background images disappear on iPhone

--- a/css/style.css
+++ b/css/style.css
@@ -182,22 +182,22 @@ footer a {
   .pimg1 {
       background-image:url('../img/homepage.png');
       min-height:350px;
-      background-size: 700px 700px;
+      background-size: 100% 100%;
   }
    .pimg2 {
       background-image:url('../img/about.jpeg');
       min-height:300px;
-      background-size: 700px 700px;
+      background-size: 100% 100%;
   }
    .pimg3 {
       background-image:url('../img/project.png');
       min-height:200px;
-      background-size: 700px 700px;
+      background-size: 100% 100%;
   }
   .pimg4 {
       background-image:url('../img/contact.jpeg');
       min-height:200px;
-      background-size: 650px 650px;
+      background-size: 100% 100%;
   }
   .ptext{
       position:absolute;
